--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "linkedin-private-api",
-  "version": "1.1.2",
+  "name": "linkedin-private-api-v2",
+  "version": "1.1.4",
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -41,12 +41,16 @@
     }
   },
   "dependencies": {
+    "@types/jsdom": "^21.1.1",
     "axios": "^0.21.0",
+    "cheerio": "^1.0.0-rc.12",
     "cookie": "^0.5.0",
     "fs": "^0.0.1-security",
+    "jquery": "^3.6.4",
     "lodash": "^4.17.15",
     "querystring": "^0.2.0",
-    "url": "^0.11.0"
+    "url": "^0.11.0",
+    "zlib": "^1.0.5"
   },
   "devDependencies": {
     "@types/config": "^0.0.41",
@@ -76,8 +80,8 @@
     "testdouble": "^3.16.1",
     "testdouble-jest": "^2.0.0",
     "ts-jest": "^26.4.1",
-    "typedoc": "~0.19.2",
-    "typedoc-plugin-markdown": "~3.1.1",
-    "typescript": "^4.0.2"
+    "typedoc": "^0.24.6",
+    "typedoc-plugin-markdown": "^3.15.3",
+    "typescript": "^5.0.3"
   }
 }
